<resources>
    <string name="app_name">Mars</string>
    <string name="save_game">Save Game</string>
    <string name="load_saved_game">Load Saved Game</string>
    <string name="new_game">New Game</string>
    <string name="please_select_a_difficulty_level_below_before_you_begin">Please select a difficulty level below before you begin : )</string>
    <string name="welcome_to_sliding_tiles_n_a_puzzle_game_where_you_must_arrange_the_numbers_in_the_correct_order">Welcome To Sliding Tiles   A Puzzle Game where you must arrange the numbers in the correct order.</string>
    <string name="UndoButton">Undo</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="slidingtiles_scoreboard">SlidingTiles Scoreboard</string>
    <string name="_2048_name">The Real 2048</string>
    <string name="slidingtiles_name">Sliding Tiles</string>
    <string name="nav_title_games">Games</string>
    <string name="nav_title_profile">Profile</string>
    <string name="nav_title_rankings">Rankings</string>
    <string name="score_board">SCORE BOARD</string>
    <string name="load_game">LOAD GAME</string>
    <string name="difficulty_level">Difficulty:</string>
    <string name="temp_msg">LOGO WILL GO HERE</string>
    <string name="zero">0</string>
    <string name="allow_max">Undo limit is now 3 ʕ •ᴥ•ʔ</string>
    <string name="sliding_tiles_ingame_logo">The logo of the sliding tiles</string>
    <string name="select_backgroud">Select Backgroud</string>
    <string name="_3x3">3X3</string>
    <string name="_4x4">4X4</string>
    <string name="_5x5">5X5</string>
    <string name="score_0">Score: 0</string>
    <string name="start">Start</string>
    <string name="games">Games</string>
    <string name="time">Time:</string>
    <string name="undo">Undo</string>
    <string name="start_game">Start Game</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="sudoku">Quick Sudoku</string>
    <string name="map_size_2048">The current map size is 4 ʕ •ᴥ•ʔ</string>
    <string name="_2048_in_game_logo">2048 in game logo</string>
    <string name="empty_scorelist_text">Nobody has ever played this level...</string>
</resources>
