<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD0D1D4"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="77dp">

        <fall2018.csc2017.gamecentre.games.sudoku.SudokuGestureDetectGridView
            android:id="@+id/sudoku_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true">

        </fall2018.csc2017.gamecentre.games.sudoku.SudokuGestureDetectGridView>

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_alignBottom="@+id/sudoku_grid"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/sudoku_grid"
            app:columnCount="3"
            app:rowCount="3">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/border"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/border"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/border"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/border"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/border"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/border"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/border"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/border"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/border"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

        </android.support.v7.widget.GridLayout>

    </RelativeLayout>

    <Chronometer
        android:id="@+id/cmTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="36dp"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="54dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/digit_1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_1"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Button
            android:id="@+id/digit_2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_2"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Button
            android:id="@+id/digit_3"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_3"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Button
            android:id="@+id/digit_4"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_4"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Button
            android:id="@+id/digit_5"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_5"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Button
            android:id="@+id/digit_6"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_6"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Button
            android:id="@+id/digit_7"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_7"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Button
            android:id="@+id/digit_8"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_8"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Button
            android:id="@+id/digit_9"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_9"
            android:textAppearance="@style/TextAppearance.AppCompat" />
    </LinearLayout>


</RelativeLayout>